--- a/docs/professor/alex_soares_de_brito.mdx
+++ b/docs/professor/alex_soares_de_brito.mdx
@@ -109,7 +109,7 @@ export const data = {
           teachers: [
             "Alex Soares de Brito"
           ],
-          classroom: "",
+          classroom: "Sala 12-2",
           students: [
             "ELE2025"
           ],
