--- a/docs/professor/darlan_roque_dapieve.mdx
+++ b/docs/professor/darlan_roque_dapieve.mdx
@@ -79,7 +79,7 @@ export const data = {
           teachers: [
             "Darlan Roque Dapieve"
           ],
-          classroom: "",
+          classroom: "Sala 12-2",
           students: [
             "ELE2025"
           ],
