--- a/docs/professor/elizangela_mendes_pereira.mdx
+++ b/docs/professor/elizangela_mendes_pereira.mdx
@@ -30,7 +30,7 @@ export const data = {
           teachers: [
             "Elizangela Mendes Pereira"
           ],
-          classroom: "",
+          classroom: "Sala 12-2",
           students: [
             "ELE2025"
           ],
@@ -52,7 +52,7 @@ export const data = {
           students: [
             "IIW2024A"
           ],
-          time: "10:15 - 11:05",
+          time: "09:25 - 10:15",
           color: ""
         }
       ]
@@ -83,7 +83,7 @@ export const data = {
           students: [
             "IIW2024A"
           ],
-          time: "10:15 - 11:05",
+          time: "09:25 - 10:15",
           color: ""
         }
       ]
