--- a/docs/professor/gabriele_antico_freiria.mdx
+++ b/docs/professor/gabriele_antico_freiria.mdx
@@ -52,7 +52,7 @@ export const data = {
           teachers: [
             "Gabriele Antico Freiria"
           ],
-          classroom: "Sala 11-2",
+          classroom: "Laboratório de Biologia",
           students: [
             "EIN2022"
           ],
@@ -65,7 +65,7 @@ export const data = {
           teachers: [
             "Gabriele Antico Freiria"
           ],
-          classroom: "Sala 7-2",
+          classroom: "Sala 8-2",
           students: [
             "BIO_ESPECIAL_1"
           ],
