--- a/docs/professor/haroldo_yutaka_misunaga.mdx
+++ b/docs/professor/haroldo_yutaka_misunaga.mdx
@@ -79,7 +79,7 @@ export const data = {
           teachers: [
             "Haroldo Yutaka Misunaga"
           ],
-          classroom: "",
+          classroom: "Sala 3-1",
           students: [
             "TGC2025"
           ],
@@ -97,7 +97,7 @@ export const data = {
           teachers: [
             "Haroldo Yutaka Misunaga"
           ],
-          classroom: "Sala 3-1",
+          classroom: "Sala 5",
           students: [
             "TGC2024"
           ],
