--- a/docs/professor/jair_fajardo_junior.mdx
+++ b/docs/professor/jair_fajardo_junior.mdx
@@ -50,7 +50,7 @@ export const data = {
             "Alex Miyamoto Mussi",
             "Jair Fajardo Junior"
           ],
-          classroom: "",
+          classroom: "Sala 12-2",
           students: [
             "ELE2025"
           ],
