--- a/docs/professor/jose_jurandir_pereira_junior.mdx
+++ b/docs/professor/jose_jurandir_pereira_junior.mdx
@@ -30,7 +30,7 @@ export const data = {
           teachers: [
             "José Jurandir Pereira Junior"
           ],
-          classroom: "",
+          classroom: "Sala 3-1",
           students: [
             "TGC2025"
           ],
@@ -91,7 +91,7 @@ export const data = {
           teachers: [
             "José Jurandir Pereira Junior"
           ],
-          classroom: "Sala 3-1",
+          classroom: "Sala 5",
           students: [
             "TGC2024"
           ],
@@ -148,7 +148,7 @@ export const data = {
           teachers: [
             "José Jurandir Pereira Junior"
           ],
-          classroom: "",
+          classroom: "Sala 3-1",
           students: [
             "TGC2025"
           ],
@@ -161,7 +161,7 @@ export const data = {
           teachers: [
             "José Jurandir Pereira Junior"
           ],
-          classroom: "Sala 3-1",
+          classroom: "Sala 5",
           students: [
             "TGC2024"
           ],
