--- a/docs/professor/keitilanger_grisa_hahn.mdx
+++ b/docs/professor/keitilanger_grisa_hahn.mdx
@@ -39,7 +39,7 @@ export const data = {
           teachers: [
             "Keitilanger Grisa Hahn"
           ],
-          classroom: "",
+          classroom: "Sala 3-1",
           students: [
             "TGC2025"
           ],
@@ -52,7 +52,7 @@ export const data = {
           teachers: [
             "Keitilanger Grisa Hahn"
           ],
-          classroom: "Sala 3-1",
+          classroom: "Sala 5",
           students: [
             "TGC2024"
           ],
@@ -96,7 +96,7 @@ export const data = {
           teachers: [
             "Keitilanger Grisa Hahn"
           ],
-          classroom: "Sala 3-1",
+          classroom: "Sala 5",
           students: [
             "TGC2024"
           ],
@@ -109,7 +109,7 @@ export const data = {
           teachers: [
             "Keitilanger Grisa Hahn"
           ],
-          classroom: "Sala 3-1",
+          classroom: "Sala 5",
           students: [
             "TGC2024"
           ],
@@ -127,7 +127,7 @@ export const data = {
           teachers: [
             "Keitilanger Grisa Hahn"
           ],
-          classroom: "",
+          classroom: "Sala 3-1",
           students: [
             "TGC2025"
           ],
