--- a/docs/professor/marcos_rogerio_oliveira.mdx
+++ b/docs/professor/marcos_rogerio_oliveira.mdx
@@ -62,7 +62,7 @@ export const data = {
           teachers: [
             "Marcos Rogério Oliveira"
           ],
-          classroom: "",
+          classroom: "Sala 7-2",
           students: [
             "AGR2025"
           ],
