--- a/docs/professor/mauro_cesar_de_souza_siena.mdx
+++ b/docs/professor/mauro_cesar_de_souza_siena.mdx
@@ -30,7 +30,7 @@ export const data = {
           teachers: [
             "Mauro César de Souza Siena"
           ],
-          classroom: "Laboratório de Informatica A",
+          classroom: "Laboratório de Informatica B",
           students: [
             "TGC2025"
           ],
@@ -65,7 +65,7 @@ export const data = {
           teachers: [
             "Mauro César de Souza Siena"
           ],
-          classroom: "Sala 12-2",
+          classroom: "Laboratório de Informatica A",
           students: [
             "AGO2023"
           ],
@@ -78,7 +78,7 @@ export const data = {
           teachers: [
             "Mauro César de Souza Siena"
           ],
-          classroom: "Laboratório de Informatica A",
+          classroom: "Laboratório de Informatica B",
           students: [
             "TGC2025"
           ],
