--- a/docs/sala/bloco_1/laboratorio_de_informatica_b.mdx
+++ b/docs/sala/bloco_1/laboratorio_de_informatica_b.mdx
@@ -92,6 +92,19 @@ export const data = {
           ],
           time: "13:10 - 14:00",
           color: ""
+        },
+        {
+          subject: "Gestão, Educação e Matemática Financeira",
+          size: 2,
+          teachers: [
+            "Mauro César de Souza Siena"
+          ],
+          classroom: "Laboratório de Informatica B",
+          students: [
+            "TGC2025"
+          ],
+          time: "19:00 - 19:50",
+          color: ""
         }
       ]
     },
@@ -101,7 +114,21 @@ export const data = {
     },
     {
       dayName: "Quinta-Feira",
-      dayClasses: []
+      dayClasses: [
+        {
+          subject: "Gestão, Educação e Matemática Financeira",
+          size: 2,
+          teachers: [
+            "Mauro César de Souza Siena"
+          ],
+          classroom: "Laboratório de Informatica B",
+          students: [
+            "TGC2025"
+          ],
+          time: "21:00 - 21:50",
+          color: ""
+        }
+      ]
     },
     {
       dayName: "Sexta-Feira",
