--- a/docs/sala/bloco_2/sala_16-2.mdx
+++ b/docs/sala/bloco_2/sala_16-2.mdx
@@ -112,19 +112,6 @@ export const data = {
       dayName: "Quarta-Feira",
       dayClasses: [
         {
-          subject: "Geografia I",
-          size: 1,
-          teachers: [
-            "Jhones Donizetti Mendes"
-          ],
-          classroom: "Sala 16-2",
-          students: [
-            "IIW2024A"
-          ],
-          time: "09:25 - 10:15",
-          color: ""
-        },
-        {
           subject: "Matemática II",
           size: 2,
           teachers: [
@@ -134,7 +121,20 @@ export const data = {
           students: [
             "IIW2024A"
           ],
-          time: "10:15 - 11:05",
+          time: "09:25 - 10:15",
+          color: ""
+        },
+        {
+          subject: "Geografia I",
+          size: 1,
+          teachers: [
+            "Alexandre Roberto Valcarenghi"
+          ],
+          classroom: "Sala 16-2",
+          students: [
+            "IIW2024A"
+          ],
+          time: "11:05 - 11:55",
           color: ""
         },
         {
@@ -156,19 +156,6 @@ export const data = {
       dayName: "Quinta-Feira",
       dayClasses: [
         {
-          subject: "Geografia I",
-          size: 1,
-          teachers: [
-            "Jhones Donizetti Mendes"
-          ],
-          classroom: "Sala 16-2",
-          students: [
-            "IIW2024A"
-          ],
-          time: "09:25 - 10:15",
-          color: ""
-        },
-        {
           subject: "Matemática II",
           size: 2,
           teachers: [
@@ -178,7 +165,20 @@ export const data = {
           students: [
             "IIW2024A"
           ],
-          time: "10:15 - 11:05",
+          time: "09:25 - 10:15",
+          color: ""
+        },
+        {
+          subject: "Geografia I",
+          size: 1,
+          teachers: [
+            "Alexandre Roberto Valcarenghi"
+          ],
+          classroom: "Sala 16-2",
+          students: [
+            "IIW2024A"
+          ],
+          time: "11:05 - 11:55",
           color: ""
         },
         {
