--- a/docs/sala/bloco_2/sala_7-2.mdx
+++ b/docs/sala/bloco_2/sala_7-2.mdx
@@ -50,14 +50,14 @@ export const data = {
           color: ""
         },
         {
-          subject: "Ética profissional, cidadania e direitos humanos",
-          size: 3,
+          subject: "Horticultura",
+          size: 4,
           teachers: [
-            "Jael dos Santos"
+            "Sônia Maria Mandotti"
           ],
           classroom: "Sala 7-2",
           students: [
-            "BIO_ESPECIAL_1"
+            "AGR2025"
           ],
           time: "19:00 - 19:50",
           color: ""
@@ -131,6 +131,19 @@ export const data = {
           ],
           time: "14:00 - 14:50",
           color: ""
+        },
+        {
+          subject: "Suinocultura",
+          size: 2,
+          teachers: [
+            "Roberto Haruyoshi Ito"
+          ],
+          classroom: "Sala 7-2",
+          students: [
+            "AGR2025"
+          ],
+          time: "19:00 - 19:50",
+          color: ""
         }
       ]
     },
@@ -177,14 +190,14 @@ export const data = {
           color: ""
         },
         {
-          subject: "PCCC 3 - Modalidades da educação e inclusão escolar",
-          size: 3,
+          subject: "Nutrição e Alimentação Animal",
+          size: 4,
           teachers: [
-            "Marcia Aparecida Barbosa"
+            "Marcos Rogério Oliveira"
           ],
           classroom: "Sala 7-2",
           students: [
-            "BIO_ESPECIAL_1"
+            "AGR2025"
           ],
           time: "19:00 - 19:50",
           color: ""
@@ -234,14 +247,14 @@ export const data = {
           color: ""
         },
         {
-          subject: "Genética molecular",
+          subject: "Gênese, Morfologia e Classificação dos Solos",
           size: 4,
           teachers: [
-            "Gabriele Antico Freiria"
+            "Elias Franco"
           ],
           classroom: "Sala 7-2",
           students: [
-            "BIO_ESPECIAL_1"
+            "AGR2025"
           ],
           time: "19:00 - 19:50",
           color: ""
@@ -291,16 +304,16 @@ export const data = {
           color: ""
         },
         {
-          subject: "Anatomia e morfologia vegetal",
-          size: 3,
+          subject: "Agroecologia e Desenvolvimento Rural Sustentável",
+          size: 2,
           teachers: [
-            "Eliana Peliçon Pereira Figueira"
+            "Sônia Maria Mandotti"
           ],
           classroom: "Sala 7-2",
           students: [
-            "BIO_ESPECIAL_1"
+            "AGR2025"
           ],
-          time: "19:50 - 20:40",
+          time: "19:00 - 19:50",
           color: ""
         }
       ]
