--- a/docs/turma/ago/ago2023.mdx
+++ b/docs/turma/ago/ago2023.mdx
@@ -226,7 +226,7 @@ export const data = {
           teachers: [
             "Mauro César de Souza Siena"
           ],
-          classroom: "Sala 12-2",
+          classroom: "Laboratório de Informatica A",
           students: [
             "AGO2023"
           ],
@@ -270,7 +270,7 @@ export const data = {
           teachers: [
             "Kleber Augusto Michalichem"
           ],
-          classroom: "Sala 2-2",
+          classroom: "Educação Física / Sala 1 B2",
           students: [
             "AGO2023"
           ],
