--- a/docs/turma/agr/agr2025.mdx
+++ b/docs/turma/agr/agr2025.mdx
@@ -16,7 +16,7 @@ export const data = {
           teachers: [
             "Sônia Maria Mandotti"
           ],
-          classroom: "",
+          classroom: "Sala 7-2",
           students: [
             "AGR2025"
           ],
@@ -34,7 +34,7 @@ export const data = {
           teachers: [
             "Roberto Haruyoshi Ito"
           ],
-          classroom: "",
+          classroom: "Sala 7-2",
           students: [
             "AGR2025"
           ],
@@ -65,7 +65,7 @@ export const data = {
           teachers: [
             "Marcos Rogério Oliveira"
           ],
-          classroom: "",
+          classroom: "Sala 7-2",
           students: [
             "AGR2025"
           ],
@@ -83,7 +83,7 @@ export const data = {
           teachers: [
             "Elias Franco"
           ],
-          classroom: "",
+          classroom: "Sala 7-2",
           students: [
             "AGR2025"
           ],
@@ -101,7 +101,7 @@ export const data = {
           teachers: [
             "Sônia Maria Mandotti"
           ],
-          classroom: "",
+          classroom: "Sala 7-2",
           students: [
             "AGR2025"
           ],
