--- a/docs/turma/ein/ein2022.mdx
+++ b/docs/turma/ein/ein2022.mdx
@@ -149,7 +149,7 @@ export const data = {
           teachers: [
             "Gabriele Antico Freiria"
           ],
-          classroom: "Sala 11-2",
+          classroom: "Laboratório de Biologia",
           students: [
             "EIN2022"
           ],
