--- a/docs/turma/ele/ele2025.mdx
+++ b/docs/turma/ele/ele2025.mdx
@@ -16,7 +16,7 @@ export const data = {
           teachers: [
             "Wylliam Salviano Gongora"
           ],
-          classroom: "",
+          classroom: "Sala 12-2",
           students: [
             "ELE2025"
           ],
@@ -29,7 +29,7 @@ export const data = {
           teachers: [
             "Kátia Cristiane Kobus Novaes"
           ],
-          classroom: "",
+          classroom: "Sala 12-2",
           students: [
             "ELE2025"
           ],
@@ -47,7 +47,7 @@ export const data = {
           teachers: [
             "Elizangela Mendes Pereira"
           ],
-          classroom: "",
+          classroom: "Sala 12-2",
           students: [
             "ELE2025"
           ],
@@ -66,7 +66,7 @@ export const data = {
             "Alex Miyamoto Mussi",
             "Jair Fajardo Junior"
           ],
-          classroom: "",
+          classroom: "Sala 12-2",
           students: [
             "ELE2025"
           ],
@@ -84,7 +84,7 @@ export const data = {
           teachers: [
             "Darlan Roque Dapieve"
           ],
-          classroom: "",
+          classroom: "Sala 12-2",
           students: [
             "ELE2025"
           ],
@@ -115,7 +115,7 @@ export const data = {
           teachers: [
             "Alex Soares de Brito"
           ],
-          classroom: "",
+          classroom: "Sala 12-2",
           students: [
             "ELE2025"
           ],
