--- a/docs/sala/bloco_1/sala_3-1.mdx
+++ b/docs/sala/bloco_1/sala_3-1.mdx
@@ -76,27 +76,27 @@ export const data = {
           color: ""
         },
         {
-          subject: "Marketing de Eventos",
-          size: 2,
-          teachers: [
-            "Keyla Christina Almeida Portela"
-          ],
-          classroom: "Sala 3-1",
-          students: [
-            "TGC2024"
-          ],
-          time: "19:00 - 19:50",
-          color: ""
-        },
-        {
-          subject: "Técnicas de Vendas e Negociação",
+          subject: "Gestão Empresarial",
           size: 2,
           teachers: [
             "Keitilanger Grisa Hahn"
           ],
           classroom: "Sala 3-1",
           students: [
-            "TGC2024"
+            "TGC2025"
+          ],
+          time: "19:00 - 19:50",
+          color: ""
+        },
+        {
+          subject: "Marketing e Comportamento do Consumidor",
+          size: 2,
+          teachers: [
+            "Keyla Christina Almeida Portela"
+          ],
+          classroom: "Sala 3-1",
+          students: [
+            "TGC2025"
           ],
           time: "21:00 - 21:50",
           color: ""
@@ -146,27 +146,14 @@ export const data = {
           color: ""
         },
         {
-          subject: "Contabilidade de Custos e Formação de Preços",
+          subject: "Legislação Aplicada e Direito do Consumidor",
           size: 2,
           teachers: [
-            "Keitilanger Grisa Hahn"
+            "José Jurandir Pereira Junior"
           ],
           classroom: "Sala 3-1",
           students: [
-            "TGC2024"
-          ],
-          time: "19:00 - 19:50",
-          color: ""
-        },
-        {
-          subject: "Contabilidade de Custos e Formação de Preços",
-          size: 2,
-          teachers: [
-            "Keitilanger Grisa Hahn"
-          ],
-          classroom: "Sala 3-1",
-          students: [
-            "TGC2024"
+            "TGC2025"
           ],
           time: "21:00 - 21:50",
           color: ""
@@ -216,27 +203,27 @@ export const data = {
           color: ""
         },
         {
-          subject: "Plano de Marketing",
+          subject: "Gestão Empresarial",
+          size: 2,
+          teachers: [
+            "Keitilanger Grisa Hahn"
+          ],
+          classroom: "Sala 3-1",
+          students: [
+            "TGC2025"
+          ],
+          time: "19:00 - 19:50",
+          color: ""
+        },
+        {
+          subject: "Marketing e Comportamento do Consumidor",
           size: 2,
           teachers: [
             "Keyla Christina Almeida Portela"
           ],
           classroom: "Sala 3-1",
           students: [
-            "TGC2024"
-          ],
-          time: "19:00 - 19:50",
-          color: ""
-        },
-        {
-          subject: "Gestão de Compras e Estoque",
-          size: 2,
-          teachers: [
-            "Lechan Colares Santos"
-          ],
-          classroom: "Sala 3-1",
-          students: [
-            "TGC2024"
+            "TGC2025"
           ],
           time: "21:00 - 21:50",
           color: ""
@@ -286,29 +273,16 @@ export const data = {
           color: ""
         },
         {
-          subject: "Ética, responsabilidade social e ambiental",
+          subject: "Métodos e técnicas de pesquisa",
           size: 2,
           teachers: [
-            "André Alexandre Valentini"
+            "Haroldo Yutaka Misunaga"
           ],
           classroom: "Sala 3-1",
           students: [
-            "TGC2024"
+            "TGC2025"
           ],
           time: "19:00 - 19:50",
-          color: ""
-        },
-        {
-          subject: "Direito Empresarial e Tributário",
-          size: 2,
-          teachers: [
-            "José Jurandir Pereira Junior"
-          ],
-          classroom: "Sala 3-1",
-          students: [
-            "TGC2024"
-          ],
-          time: "21:00 - 21:50",
           color: ""
         }
       ]
@@ -356,27 +330,27 @@ export const data = {
           color: ""
         },
         {
-          subject: "Gestão de Pessoas",
-          size: 2,
-          teachers: [
-            "Haroldo Yutaka Misunaga"
-          ],
-          classroom: "Sala 3-1",
-          students: [
-            "TGC2024"
-          ],
-          time: "19:00 - 19:50",
-          color: ""
-        },
-        {
-          subject: "Direito Empresarial e Tributário",
+          subject: "Legislação Aplicada e Direito do Consumidor",
           size: 2,
           teachers: [
             "José Jurandir Pereira Junior"
           ],
           classroom: "Sala 3-1",
           students: [
-            "TGC2024"
+            "TGC2025"
+          ],
+          time: "19:00 - 19:50",
+          color: ""
+        },
+        {
+          subject: "Informática e Automação Comercial",
+          size: 2,
+          teachers: [
+            "Samuel Stephan Milczuk"
+          ],
+          classroom: "Sala 3-1",
+          students: [
+            "TGC2025"
           ],
           time: "21:00 - 21:50",
           color: ""
