--- a/docs/sala/bloco_2/sala_12-2.mdx
+++ b/docs/sala/bloco_2/sala_12-2.mdx
@@ -74,6 +74,32 @@ export const data = {
           ],
           time: "15:05 - 15:55",
           color: ""
+        },
+        {
+          subject: "Instrumentos de Medidas Elétricas",
+          size: 2,
+          teachers: [
+            "Wylliam Salviano Gongora"
+          ],
+          classroom: "Sala 12-2",
+          students: [
+            "ELE2025"
+          ],
+          time: "19:00 - 19:50",
+          color: ""
+        },
+        {
+          subject: "Comunicação e Expressão",
+          size: 2,
+          teachers: [
+            "Kátia Cristiane Kobus Novaes"
+          ],
+          classroom: "Sala 12-2",
+          students: [
+            "ELE2025"
+          ],
+          time: "21:00 - 21:50",
+          color: ""
         }
       ]
     },
@@ -118,6 +144,19 @@ export const data = {
           ],
           time: "15:05 - 15:55",
           color: ""
+        },
+        {
+          subject: "Fundamentos da Matemática",
+          size: 4,
+          teachers: [
+            "Elizangela Mendes Pereira"
+          ],
+          classroom: "Sala 12-2",
+          students: [
+            "ELE2025"
+          ],
+          time: "19:00 - 19:50",
+          color: ""
         }
       ]
     },
@@ -148,6 +187,20 @@ export const data = {
             "AGO2023"
           ],
           time: "08:20 - 09:10",
+          color: ""
+        },
+        {
+          subject: "Eletricidade Básica",
+          size: 4,
+          teachers: [
+            "Alex Miyamoto Mussi",
+            "Jair Fajardo Junior"
+          ],
+          classroom: "Sala 12-2",
+          students: [
+            "ELE2025"
+          ],
+          time: "19:00 - 19:50",
           color: ""
         }
       ]
@@ -182,16 +235,16 @@ export const data = {
           color: ""
         },
         {
-          subject: "Matemática III",
-          size: 2,
+          subject: "Desenho Técnico",
+          size: 4,
           teachers: [
-            "Mauro César de Souza Siena"
+            "Darlan Roque Dapieve"
           ],
           classroom: "Sala 12-2",
           students: [
-            "AGO2023"
+            "ELE2025"
           ],
-          time: "10:15 - 11:05",
+          time: "19:00 - 19:50",
           color: ""
         }
       ]
@@ -236,6 +289,19 @@ export const data = {
             "AGO2023"
           ],
           time: "15:05 - 15:55",
+          color: ""
+        },
+        {
+          subject: "Física Aplicada",
+          size: 2,
+          teachers: [
+            "Alex Soares de Brito"
+          ],
+          classroom: "Sala 12-2",
+          students: [
+            "ELE2025"
+          ],
+          time: "21:00 - 21:50",
           color: ""
         }
       ]
