--- a/docs/sala/bloco_2/sala_9-2.mdx
+++ b/docs/sala/bloco_2/sala_9-2.mdx
@@ -48,19 +48,6 @@ export const data = {
           ],
           time: "15:05 - 15:55",
           color: ""
-        },
-        {
-          subject: "Legislação e Ética Profissional",
-          size: 2,
-          teachers: [
-            "André Alexandre Valentini"
-          ],
-          classroom: "Sala 9-2",
-          students: [
-            "ELE2024"
-          ],
-          time: "21:00 - 21:50",
-          color: ""
         }
       ]
     },
@@ -107,14 +94,14 @@ export const data = {
           color: ""
         },
         {
-          subject: "Máquinas elétricas",
+          subject: "Educação ambiental e desenvolvimento sustentável",
           size: 4,
           teachers: [
-            "Wylliam Salviano Gongora"
+            "Karina Dias Espartosa"
           ],
           classroom: "Sala 9-2",
           students: [
-            "ELE2024"
+            "BIO_ESPECIAL_2"
           ],
           time: "19:00 - 19:50",
           color: ""
@@ -123,21 +110,7 @@ export const data = {
     },
     {
       dayName: "Quarta-Feira",
-      dayClasses: [
-        {
-          subject: "Eletrônica de Potência",
-          size: 4,
-          teachers: [
-            "Juliano da Rocha Queiroz"
-          ],
-          classroom: "Sala 9-2",
-          students: [
-            "ELE2024"
-          ],
-          time: "19:00 - 19:50",
-          color: ""
-        }
-      ]
+      dayClasses: []
     },
     {
       dayName: "Quinta-Feira",
@@ -166,19 +139,6 @@ export const data = {
             "IIW2025A"
           ],
           time: "10:15 - 11:05",
-          color: ""
-        },
-        {
-          subject: "Equipamentos elétricos e Sistema elétricos de potência",
-          size: 4,
-          teachers: [
-            "Danilo Hungaro Micheletti"
-          ],
-          classroom: "Sala 9-2",
-          students: [
-            "ELE2024"
-          ],
-          time: "19:00 - 19:50",
           color: ""
         }
       ]
@@ -210,20 +170,6 @@ export const data = {
             "IIW2025A"
           ],
           time: "09:25 - 10:15",
-          color: ""
-        },
-        {
-          subject: "Instalações Elétricas",
-          size: 4,
-          teachers: [
-            "Alex Miyamoto Mussi",
-            "Wylliam Salviano Gongora"
-          ],
-          classroom: "Sala 9-2",
-          students: [
-            "ELE2024"
-          ],
-          time: "19:00 - 19:50",
           color: ""
         }
       ]
