--- a/docs/turma/iiw/iiw2024a.mdx
+++ b/docs/turma/iiw/iiw2024a.mdx
@@ -164,19 +164,6 @@ export const data = {
           color: ""
         },
         {
-          subject: "Geografia I",
-          size: 1,
-          teachers: [
-            "Jhones Donizetti Mendes"
-          ],
-          classroom: "Sala 16-2",
-          students: [
-            "IIW2024A"
-          ],
-          time: "09:25 - 10:15",
-          color: ""
-        },
-        {
           subject: "Matemática II",
           size: 2,
           teachers: [
@@ -186,7 +173,20 @@ export const data = {
           students: [
             "IIW2024A"
           ],
-          time: "10:15 - 11:05",
+          time: "09:25 - 10:15",
+          color: ""
+        },
+        {
+          subject: "Geografia I",
+          size: 1,
+          teachers: [
+            "Alexandre Roberto Valcarenghi"
+          ],
+          classroom: "Sala 16-2",
+          students: [
+            "IIW2024A"
+          ],
+          time: "11:05 - 11:55",
           color: ""
         }
       ]
@@ -208,19 +208,6 @@ export const data = {
           color: ""
         },
         {
-          subject: "Geografia I",
-          size: 1,
-          teachers: [
-            "Jhones Donizetti Mendes"
-          ],
-          classroom: "Sala 16-2",
-          students: [
-            "IIW2024A"
-          ],
-          time: "09:25 - 10:15",
-          color: ""
-        },
-        {
           subject: "Matemática II",
           size: 2,
           teachers: [
@@ -230,7 +217,20 @@ export const data = {
           students: [
             "IIW2024A"
           ],
-          time: "10:15 - 11:05",
+          time: "09:25 - 10:15",
+          color: ""
+        },
+        {
+          subject: "Geografia I",
+          size: 1,
+          teachers: [
+            "Alexandre Roberto Valcarenghi"
+          ],
+          classroom: "Sala 16-2",
+          students: [
+            "IIW2024A"
+          ],
+          time: "11:05 - 11:55",
           color: ""
         }
       ]
